# tailwatertu.org

./: .gitignore  README.md  pyproject.toml
output/feeds/: all.atom.xml
tailwatertu/: pelicanconf.py
tailwatertu/content/: first.md
tailwatertu/output/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
tailwatertu/output/author/: tailwatercontentbot.html
tailwatertu/output/category/: review.html
